--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <ul>
       <li><a href="/assignment1/index.html">assignment 1</a></li>
       <li><a href="/assignment2/index.html">assignment 2</a></li>
-      
+      <li><a href="/assignment3/index.html">assignment 3</a></li>
+      <li><a href="/assignment4/index.html">assignment 4</a></li>
       </ul>
   </nav>
 </body>
