--- a/ifsc_3300/assignment4/index.html
+++ b/ifsc_3300/assignment4/index.html
@@ -1,19 +1,14 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>ifsc 3300 | Brittany Bisbee</title>
   <meta name="description" content="Keyword Rich Description" />
   <meta name="author" content="Your Name" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
-
 <body>
-  
   <script>
-
         alert("The Calculate MPG application");
         let miles = prompt("Enter miles driven");
         miles = parseInt(miles);
@@ -26,8 +21,25 @@
         mpg = parseFloat(mpg);
 
         alert("Miles per gallon = " + mpg);
+    </script> 
+    </body>
+    <body>
 
-    </script>
-  
+    </main>
+        <h1>Hello!</h1>
+        <p>Today's Date is  
+            <script>
+              const today = new Date();
+                document.write(today.toDateString());
+            </script></p>
+
+        <p>We hope you enjoy our website!</p>
+    </main>
+    <footer>
+        <script>
+            document.write(`Copyright \u00A9
+                ${today.getFullYear()}`);
+        </script>
+    </footer>
 </body>
 </html>
