--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href="/assignment2/index.html">assignment 2</a></li>
       <li><a href="/assignment3/index.html">assignment 3</a></li>
       <li><a href="/assignment4/index.html">assignment 4</a></li>
+      <li><a href="/assignment5/index.html">assignment 5</a></li>
       </ul>
   </nav>
 </body>
