--- a/ifsc_3300/image_swap/index.html
+++ b/ifsc_3300/image_swap/index.html
@@ -16,17 +16,17 @@
        <h1>Fishing Images</h1>
        <p>Click on an image to enlarge</p>
        <ul id="image_list">
-           <li><a href="images/release.jpg" title="Catch and Release">
-               <img src="thumbnails/release.jpg" alt="releqase fish"</a></li>
-           <li><a href="images/deer.jpg" title="Deer at Play">
-               <img src="thumbnails/deer.jpg" alt="deer"</a></li>
-           <li><a href="images/hero.jpg" title="The Big One">
-               <img src="thumbnails/hero.jpg" alt="big fish"</a></li>
-           <li><a href="images/bison.jpg" title="Roaming Bison">
-               <img src="thumbnails/bison.jpg" alt="bison"</a></li>
+           <li><a href="assets/img/h1.jpg" title="Catch and Release">
+               <img src="assets/thumbnails/t1.jpg" alt="release fish"</a></li>
+           <li><a href="assets/img/h2.jpg" title="Deer at Play">
+               <img src="assets/thumbnails/t2.jpg" alt="deer"</a></li>
+           <li><a href="assets/img/h3.jpg" title="The Big One">
+               <img src="assets/thumbnails/t3.jpg" alt="big fish"</a></li>
+           <li><a href="assets/img/h4.jpg" title="Roaming Bison">
+               <img src="assets/thumbnails/t4.jpg" alt="bison"</a></li>
        </ul>
-       <h2> id="caption">Catch and Release</h2>
-       <p><img id="main_image" src="images/release.jpg" alt="release fish"></p>
+       <h2 id="caption">Catch and Release</h2>
+       <p><img id="main_image" src="assets/img/h1.jpg" alt="release fish"></p>
        <script src="image_swap.js"></script>
     </main>
 
