--- a/ifsc_3300/slideshow/index.html
+++ b/ifsc_3300/slideshow/index.html
@@ -1,31 +1,31 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>ifsc 3300 | Brittany Bisbee</title>
-  <meta name="description" content="Keyword Rich Description" />
-  <meta name="author" content="Your Name" />
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fishing Slide Show</title>
+    <link rel="stylesheet" href="assets/css/slide_show.css">
 </head>
-
 <body>
-
     <main>
-       <h1>Fishing Slide Show</h1>
-      
-       <ul id="image_list">
-           <li><a href="images/release.jpg" title="Catch and Release"></a></li>
-           <li><a href="images/deer.jpg" title="Deer at Play"></a></li>
-           <li><a href="images/hero.jpg" title="The Big One"></a></li>
-           <li><a href="images/bison.jpg" title="Roaming Bison"></a></li>
-       </ul>
-       <p><img id="main_image" src="images/release.jpg alt="Catch and Release"></p>
-       <h2 id="caption">Catch and Release</h2>
-       <script src="slideshow.js"></script>
-    </main>
+        <h1>Fishing Slide Show</h1>
 
+        <ul id="image_list">
+            <li><a href="assets/img/release.jpg" title="Catch and Release"></a></li>
+            <li><a href="assets/img/deer.jpg" title="Deer at Play"></a></li>
+            <li><a href="assets/img/hero.jpg" title="The Big One!"></a></li>
+            <li><a href="assets/img/bison.jpg" title="Roaming Bison"></a></li>
+        </ul>
+
+        <p>
+            <input type="button" id="start" value="Start">
+            <input type="button" id="pause" value="Pause" disabled="true">
+        </p>        
+    
+        <p><img id="main_image" src="assets/img/release.jpg" alt="Catch and Release"></p>
+        <h2 id="caption">Catch and Release</h2>    
+
+        <script src="assets/js/slide_show.js"></script>
+    </main>  
 </body>
-
 </html>
