--- a/ifsc_3300/exercise8_3/index.html
+++ b/ifsc_3300/exercise8_3/index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Murach books</title>
 	<link rel="stylesheet" href="assets/css/book_list.css">
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+	<script src="assets/js/book_list.js"></script>
 
 </head>
 
@@ -44,7 +48,6 @@
 	    	</ul>
 		</div>
 	</main>
-	<script src="http://code.jquery.com/jquery-3.4.1.slim.min.js"></script>	
-	<script src="assets/js/book_list.js"></script>   	
+	   	
 </body>
 </html>
